# flask-login

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES  CHANGES.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  README  README.markdown  README.md  dev-py2-requirements.txt  dev-py3k-requirements.txt  dev-requirements.txt  flask_login.py  install_requirements.py  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg  setup.py  test_login.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: lock.yaml  pre-commit.yaml  publish-release.yml  pypi-release.yaml  tests.yaml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_static/: theme.css
docs/_themes/: README  flask_theme_support.py
docs/_themes/flask/static/: flasky.css_t
example/: login-example.py
example/templates/: index.html  layout.html  login.html  reauth.html  secret.html
flask_login/: __about__.py  __init__.py  _compat.py  config.py  login_manager.py  mixin.py  mixins.py  signals.py  test_client.py  utils.py
flaskext/: login.py
requirements/: ci-release.in  ci-release.txt  ci-tests-py37.in  ci-tests-py37.txt  ci-tests.in  ci-tests.txt  dev.in  dev.txt  docs.txt  py37.in  py37.txt  style.in  style.txt  tests-min.in  tests-min.txt  tests-py37.in  tests-py37.txt  tests.in  tests.txt
requirements-min/: README.md  tests-min.in  tests-min.txt
src/flask_login/: __about__.py  __init__.py  config.py  login_manager.py  mixins.py  session_cache.py  signals.py  test_client.py  utils.py
tests/: _models.py  login.py  login_tests.py  test_config.py  test_login.py
