[metadata]
name = Flask-Login
version = attr: flask_login.__about__.__version__
url = https://github.com/maxcountryman/flask-login
project_urls =
    Documentation = https://flask-login.readthedocs.io/
    Changes = https://github.com/maxcountryman/flask-login/blob/main/CHANGES.md
    Source Code = https://github.com/maxcountryman/flask-login
    Issue Tracker = https://github.com/maxcountryman/flask-login/issues
license = MIT
author = Matthew Frazier
author_email = leafstormrush@gmail.com
maintainer = Max Countryman
description = User authentication and session management for Flask.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[tool:pytest]
testpaths = tests
filterwarnings =
    error
