[metadata]
name = Flask-Login
version = attr: flask_login.__about__.__version__
url = https://github.com/maxcountryman/flask-login
project_urls =
    Documentation = https://flask-login.readthedocs.io/
    Changes = https://github.com/maxcountryman/flask-login/blob/main/CHANGES.md
    Source Code = https://github.com/maxcountryman/flask-login
    Issue Tracker = https://github.com/maxcountryman/flask-login/issues
license = MIT
author = Matthew Frazier
author_email = leafstormrush@gmail.com
maintainer = Max Countryman
description = User authentication and session management for Flask.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
source =
    flask_login

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ exports names
    src/flask_login/__init__.py: F401
